--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SmartScale App</string>
+    <string name="username">Benutzername</string>
+    <string name="password">Password</string>
+    <string name="login">Anmelden</string>
+    <string name="register">Registrieren</string>
 </resources>
