Working on Register Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="register">Registrieren</string>
     <string name="firstname">Vorname</string>
     <string name="lastname">Nachname</string>
+    <string name="mail">Email</string>
 </resources>
