Working on DatePicker for Register

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">SmartScale App</string>
     <string name="username">Benutzername</string>
-    <string name="password">Password</string>
+    <string name="password">Passwort</string>
     <string name="login">Anmelden</string>
     <string name="register">Registrieren</string>
     <string name="firstname">Vorname</string>
     <string name="lastname">Nachname</string>
     <string name="mail">Email</string>
+    <string name="password_repeat">Passwort wiederholen</string>
+    <string name="birthday">Geburtstag</string>
 </resources>
